:art: Got a bunch of media files local.
 #2

Signed-off-by: Myles Braithwaite <me@mylesbraithwaite.com>

--- a/source/_posts/bookmark/2011-12-20-us-highways-as-a-subway-map.html
+++ b/source/_posts/bookmark/2011-12-20-us-highways-as-a-subway-map.html
@@ -9,10 +9,6 @@ bookmark:
   url: http://www.cambooth.net/archives/801
 ---
 
-<div class="illustration inline">
-    <a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/197/map.jpg" title="Ringtones Infographic">
-    <img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/197/map.jpg" alt="Ringtones Infographic">
-    </a>
-</div>
+{% include c_image.html src='2011/354/us-highways-as-a-subway-map/map.jpg' alt='Map' %}
 
 <p><a href="http://www.cambooth.net/">Cameron Booth</a> made this really cool map of the United States highway system in the style of a traditional subway map.</p>
