--- a/source/_posts/bookmark/2012-01-05-the-problem-with-patents-infographic.html
+++ b/source/_posts/bookmark/2012-01-05-the-problem-with-patents-infographic.html
@@ -10,8 +10,5 @@ bookmark:
 ---
 
 <p>Jason from <a href="http://frugaldad.com/">Frugal Dad</a> made this interesting infographic about the United States of America's patent system.</p>
-<div class="illustration inline">
-    <a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/182/patents.jpg" title="The Problem with Patents">
-    <img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/182/patents.jpg" geometry="500" alt="The Problem with Patents">
-    </a>
-</div>
+
+{% include c_image.html src='2012/005/the-problem-with-patents-infographic/patents.jpg' alt='The Problem with Patents' %}
