--- a/source/_posts/bookmark/2013-09-12-how-to-make-coffee-in-a-french-press.html
+++ b/source/_posts/bookmark/2013-09-12-how-to-make-coffee-in-a-french-press.html
@@ -7,63 +7,34 @@ author: myles
 tags: [coffee, french-press, press-pot]
 bookmark:
   url: http://stumptowncoffee.com/brew-guides/press-pot/
+gallery:
+  images:
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_01.jpg
+        alt: Grind Coffee
+        caption: Grind the coffee beans
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_02.jpg
+        alt: Add Coffee to Pot
+        caption: Add the ground coffee to the French Press
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_03.jpg
+        alt: Add Water
+        caption: Add boiling water to the French Press
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_04.jpg
+        alt: Start Timer
+        caption: Start a timer for four minutes
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_05.jpg
+        alt: Stir French Press
+        caption: Stir the coffee grounds and water in the French Press
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_06.jpg
+        alt: Put the Press-Top on Pot
+        caption: Put the _Press-Top_ on the French Press
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_07.jpg
+        alt: Press the Post
+        caption: Apply downward force on the French Press
+    - - src: 2013/255/how-to-make-coffee-in-a-french-press/presspot_08.jpg
+        alt: Pour the Coffee
+        caption: Pour the coffee into your faovirte cup.
 ---
 
 <p><strong>Stumptown Coffee Roasters</strong> have a great <a href="http://stumptowncoffee.com/brew-guides/press-pot/" title="How To Make Coffee in a Press Pot">article on how to make coffee in a French Press</a> (or as they call it Press Pot).</p>
-<div class="row">
-    <div class="col-sm-12">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_01.jpg" alt="Grind Coffee">
-        </a>
-    </div>
 
-    <div class="clearfix"></div>
-
-    <div class="col-sm-6">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_02.jpg" alt="Add Coffee to Pot">
-        </a>
-    </div>
-
-    <div class="col-sm-6">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_03.jpg" alt="Add Water">
-        </a>
-    </div>
-
-    <div class="clearfix"></div>
-
-    <div class="col-sm-6">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_04.jpg" alt="Start Timer">
-        </a>
-    </div>
-
-    <div class="col-sm-6">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_05.jpg" alt="Stir Pot">
-        </a>
-    </div>
-
-    <div class="clearfix"></div>
-
-    <div class="col-sm-6">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_06.jpg" alt="Put the Press-Top on Pot">
-        </a>
-    </div>
-
-    <div class="col-sm-6">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_07.jpg" alt="Press the Pot">
-        </a>
-    </div>
-
-    <div class="clearfix"></div>
-
-    <div class="col-sm-12">
-        <a href="http://stumptowncoffee.com/brew-guides/press-pot/" class="thumbnail">
-            <img src="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/219/presspot_08.jpg" alt="Pour the Coffee">
-        </a>
-    </div>
-</div>
+{% include c_gallery.html gallery=page.gallery %}
