--- a/source/_posts/bookmark/2013-10-18-what-each-country-leads-the-world-in.html
+++ b/source/_posts/bookmark/2013-10-18-what-each-country-leads-the-world-in.html
@@ -7,8 +7,12 @@ author: myles
 tags: [map, world]
 bookmark:
   url: http://thedoghousediaries.com/5414
+via:
+  title: What Each Country Leads The World In
+  publisher: Laughing Squad
+  url: http://laughingsquid.com/what-each-country-leads-the-world-in/
 ---
 
-<div class="illustration"><a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/240/what_each_country_leads_the_world_in.png" title="What Each Country Leads The World In"><img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/240/what_each_country_leads_the_world_in-small.png" alt="What Each Country Leads The World In" class="img-responsive" style="display:block;"></a></div>
+{% include c_image.html src='2013/291/what-each-country-leads-the-world-in/what_each_country_leads_the_world_in.png' alt='What Each Country Leads the World In' %}
 
-<p><a href="http://thedoghousediaries.com/5414">Doghouse</a> made this really cool map of the <a href="http://thedoghousediaries.com/maplesyrup">what each country leads the world in</a> (via <a href="http://laughingsquid.com/what-each-country-leads-the-world-in/" title="What Each Country Leads The World In">Laughing Squad</a>).</p>
+<p><a href="http://thedoghousediaries.com/5414">Doghouse</a> made this really cool map of the <a href="http://thedoghousediaries.com/maplesyrup">what each country leads the world in</a>.</p>
