--- a/source/_posts/bookmark/2013-11-25-james-bond-film-posters-by-alain-bossuyt.html
+++ b/source/_posts/bookmark/2013-11-25-james-bond-film-posters-by-alain-bossuyt.html
@@ -7,54 +7,24 @@ author: myles
 tags: [film, posters, james-bond]
 bookmark:
   url: http://www.behance.net/gallery/James-Bond-Fan-Art-Posters/12128353
+gallery:
+  images:
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/live-and-let-die.jpg
+        alt: Live and Let Die by Alain Bossuyt
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/from-russia-with-love.jpg
+        alt: From Russia with Love by Alain Bossuyt
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/you-only-live-twice.jpg
+        alt: You Only Live Twice by Alain Bossuyt
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/a-view-to-a-kill.jpg
+        alt: A View to a Kill by Alain Bossuyt
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/octopussy.jpg
+        alt: Octopussy by Alain Bossuyt
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/dr-no.jpg
+        alt: Dr. No by Alain Bossuyt
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/goldfinger.jpg
+        alt: Goldfinger by Alain Bossuyt
+    - - src: 2013/329/james-bond-film-posters-by-alain-bossuyt/diamonds-are-forever.jpg
+        alt: Diamonds are Forever by Alain Bossuyt
 ---
 
-<div class="row">
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_cf44c03b55d2787bc0114c46ec292968.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_cf44c03b55d2787bc0114c46ec292968.jpg" alt="Live and Let Die by Alain Bossuyt">
-		</a>
-	</div>
-
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_b083c0aa325e4277826e4f17cd35e7eb.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_b083c0aa325e4277826e4f17cd35e7eb.jpg" alt="From Russia with Love by Alain Bossuyt">
-		</a>
-	</div>
-
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_3487e38b226a0c15bbf4523a5e0f5d64.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_3487e38b226a0c15bbf4523a5e0f5d64.jpg" alt="You Only Live Twice by Alain Bossuyt">
-		</a>
-	</div>
-
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_44c77ebf035e7cb8be53b2092bc9b342.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_44c77ebf035e7cb8be53b2092bc9b342.jpg" alt="A View to a Kill by Alain Bossuyt">
-		</a>
-	</div>
-
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_17ca50110a54f421c4db3b58486f3399.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_17ca50110a54f421c4db3b58486f3399.jpg" alt="Octopussy by Alain Bossuyt">
-		</a>
-	</div>
-
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_7cb2a79c4d153bcab2694c5c20c9300d.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_7cb2a79c4d153bcab2694c5c20c9300d.jpg" alt="Dr. No by Alain Bossuyt">
-		</a>
-	</div>
-
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_07f1daf831668cb48ef7aaa1d37353cb.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_07f1daf831668cb48ef7aaa1d37353cb.jpg" alt="Goldfinger by Alain Bossuyt">
-		</a>
-	</div>
-
-	<div class="col-sm-6 col-md-3">
-		<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_5b75c1a7f769ae5f0acf635343490cd2.jpg" class="thumbnail">
-			<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/254/hd_5b75c1a7f769ae5f0acf635343490cd2.jpg" alt="Diamonds are Forever by Alain Bossuyt">
-		</a>
-	</div>
-</div>
+{% include c_gallery.html gallery=page.gallery %}
