--- a/source/_posts/bookmark/2013-12-04-bitcoin-survival-guide-everything-you-need-to-know-about-the-future-of-money.html
+++ b/source/_posts/bookmark/2013-12-04-bitcoin-survival-guide-everything-you-need-to-know-about-the-future-of-money.html
@@ -9,13 +9,4 @@ bookmark:
   url: http://www.wired.com/wiredenterprise/2013/11/bitcoin-survival-guide/all/
 ---
 
-<div class="thumbnail">
-<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/261/bitcoin-anatomy.jpg" alt="Anatomy of Bitcoin by T.A. Gruneisen, from WIRED">
-<div class="caption">
-<h3>
-<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/261/bitcoin-anatomy.jpg" title="Anatomy of Bitcoin by T.A. Gruneisen, from WIRED">
-Anatomy of Bitcoin by T.A. Gruneisen, from WIRED
-</a>
-</h3>
-</div>
-</div>
+{% include c_image.html src='2013/338/bitcoin-survival-guide-everything-you-need-to-know-about-the-future-of-money/bitcoin-anatomy.jpg' alt='Anatomy of Bitcoin by T.A. Gruneisen, from WIRED' caption='Anatomy of Bitcoin by T.A. Gruneisen, from WIRED' %}
