--- a/source/_posts/bookmark/2013-12-11-a-map-of-all-the-countries-that-contribute-to-a-single-jar-of-nutella.html
+++ b/source/_posts/bookmark/2013-12-11-a-map-of-all-the-countries-that-contribute-to-a-single-jar-of-nutella.html
@@ -9,8 +9,4 @@ bookmark:
   url: http://qz.com/156163/a-map-of-all-the-countries-that-contribute-to-a-single-jar-of-nutella/
 ---
 
-<div class="row">
-<div class="col-xs-12">
-<a href="http://qz.com/156163/a-map-of-all-the-countries-that-contribute-to-a-single-jar-of-nutella/" class="thumbnail" title="A map of all the countries that contribute to a single jar of Nutella"><img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/264/nutella-map_1.jpg" alt="A map of all the countries that contribute to a single jar of Nutella"></a>
-</div>
-</div>
+{% include c_image.html src='2013/345/a-map-of-all-the-countries-that-contribute-to-a-single-jar-of-nutella/nutella-map.jpg' alt='A map of all the countries that contribute to a single jar of Nutella' caption='A map of all the countries that contribute to a single jar of Nutella' %}
