--- a/source/_posts/bookmark/2014-01-18-termcoin.html
+++ b/source/_posts/bookmark/2014-01-18-termcoin.html
@@ -9,5 +9,6 @@ bookmark:
   url: https://github.com/chjj/termcoin
 ---
 
-<p><a href="http://media.mylesbraithwaite.com/attachments/bookmarks_bookmark/279/r0w7bHD.png" title="termcoin screenshot" class="thumbnail"><img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/279/r0w7bHD.png" alt="termcoin screenshot"></a></p>
+{% include c_image.html src='2014/018/termcoin/termcoin.png' alt='termcoin screenshot' %}
+
 <p>A Bitcoin wallet for the command line written in <code>node.js</code>. </p>
