--- a/source/_posts/bookmark/2014-05-13-the-oatmeals-review-of-the-tesla-model-s.html
+++ b/source/_posts/bookmark/2014-05-13-the-oatmeals-review-of-the-tesla-model-s.html
@@ -10,6 +10,5 @@ bookmark:
 ---
 
 <p>The Oatmeal gives a great review of the <strong>Tesla Model S</strong>.</p>
-<p><a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/296/header.png" title="The Oatmeal's Review of the Tesla Model S" class="thumbnail">
-<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/296/header.png" alt="The Oatmeal's Review of the Tesla Model S">
-</a></p>
+
+{% include c_image.html src='2014/133/the-oatmeals-review-of-the-tesla-model-s/header.png' %}
