--- a/source/_posts/bookmark/2013-11-13-sandman-overture-2-delayed-for-two-months.html
+++ b/source/_posts/bookmark/2013-11-13-sandman-overture-2-delayed-for-two-months.html
@@ -10,10 +10,5 @@ bookmark:
 ---
 
 <p>Really disappointed to hear that Neil Gaiman's <em>Sandman: Overture #2</em> is going to be pushed from December 2013 to February 2014.</p>
-<div class="row">
-<div class="col-sm-6 col-sm-offset-3">
-<a href="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/249/Sandman%20-%20Overture%201.jpg" class="thumbnail" title="Sandman: Overture #1">
-<img src="//media.mylesbraithwaite.com/attachments/bookmarks_bookmark/249/Sandman%20-%20Overture%201.jpg" alt="Sandman: Overture #1">
-</a>
-</div>
-</div>
+
+{% include c_image.html src='2013/317/sandman-overture-2-delayed-for-two-months/sandman-overture-1.jpg' alt='Sandman: Overture #1' %}
