:art: Removed the cdn media url from a bunch of posts.
 #2

Signed-off-by: Myles Braithwaite <me@mylesbraithwaite.com>

--- a/source/_posts/bookmark/2011-03-14-owsley-stanley-died-in-an-automobile-accident-on-sunday.html
+++ b/source/_posts/bookmark/2011-03-14-owsley-stanley-died-in-an-automobile-accident-on-sunday.html
@@ -10,7 +10,8 @@ bookmark:
 ---
 
 <p>Owsley "Bear" Stanley, an LSD cook from the 60s in San Francisco, died in an automobile accident on Sunday in Australia. Steely Dan even wrote a song about him called "Kid Charlemagne" on their 1975 album <em>The Royal Scam</em>.</p>
-<p><audio controls="controls">
-    <source  src="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-03-14-owsley-stanley-died-in-an-automobile-accident-on-sunday/kid-charlemagne.mp3">
-    <source src="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-03-14-owsley-stanley-died-in-an-automobile-accident-on-sunday/kid-charlemagne.ogg" type="audio/ogg">
-</audio></p>
+
+<audio controls="controls">
+    <source  src="{{ '2011/073/owsley-stanley-died-in-an-automobile-accident-on-sunday/kid-charlemagne.mp3' | prepend: site.upload_url }}">
+    <source src="{{ '2011/073/owsley-stanley-died-in-an-automobile-accident-on-sunday/kid-charlemagne.ogg' | prepend: site.upload_url }}" type="audio/ogg">
+</audio>
