--- a/source/_posts/bookmark/2011-05-10-evidence-that-gorillas-pass-on-traditions.html
+++ b/source/_posts/bookmark/2011-05-10-evidence-that-gorillas-pass-on-traditions.html
@@ -10,14 +10,13 @@ bookmark:
 ---
 
 <p>It looks like Chips and Orang-Utans (and humans of course) are not the only primates that pass on knowledge in a social group. A recent study now suggests that Gorillas do infract pass on knowledge in a social group.</p>
+
 <blockquote class="blockquote">
-<p>Richard Byrne at the University of St Andrews, UK, and colleagues looked at how captive-bred gorillas picked apart stinging nettles to eat them. They noticed that the apes never detached the stinging leaf stalks and reduced their exposure to stings by squeezing nettles together.</p>
-<p>"This fascinated us because, while wild gorillas in Rwanda also pick apart stinging nettles, they do so by removing stalks and folding, rather than squeezing, the nettles", says Byrne.</p>
+    <p>Richard Byrne at the University of St Andrews, UK, and colleagues looked at how captive-bred gorillas picked apart stinging nettles to eat them. They noticed that the apes never detached the stinging leaf stalks and reduced their exposure to stings by squeezing nettles together.</p>
+
+    <p>"This fascinated us because, while wild gorillas in Rwanda also pick apart stinging nettles, they do so by removing stalks and folding, rather than squeezing, the nettles", says Byrne.</p>
 </blockquote>
-<div class="inline illustration">
-    <a href="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-05-10-evidence-that-gorillas-pass-on-traditions/gorillas_large.jpg" title="Gorillas by Thomas Widmann">
-        <img src="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-05-10-evidence-that-gorillas-pass-on-traditions/gorillas_small.jpg" alt="Gorillas by Thomas Widmann">
-    </a>
-</div>
+
+{% include c_image.html src='2011/130/evidence-that-gorillas-pass-on-traditions/gorillas.jpg' alt='Gorillas by Thomas Widmann' %}
 
 <p>Gorillas by <a href="http://www.flickr.com/photos/viralbus/763220016/" title="Gorillas">Thomas Widmann</a>.</p>
