--- a/source/_posts/bookmark/2011-03-25-moviebarcode.html
+++ b/source/_posts/bookmark/2011-03-25-moviebarcode.html
@@ -10,10 +10,7 @@ bookmark:
 ---
 
 <p>moviebarcode is an interesting project where they take a colour representation of a film frame and show it like a <a href="http://en.wikipedia.org/wiki/Barcode" title="Wikipedia article on Barcode's">barcode</a> (via <a href="http://kottke.org/11/03/movie-bar-codes" title="Movie bar codes">kottke.org</a>).</p>
-<div class="inline illustration">
-    <a href="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-03-25-moviebarcode/01-speed-racer-large.jpeg" title="Speed Racer (2008)">
-        <img src="http://cdn.mylesbraithwaite.com/media/uploads/posts/2011-03-25-moviebarcode/01-speed-racer-small.jpeg" alt="Speed Racer (2008)">
-    </a>
-</div>
+
+{% include c_image.html src='2011/084/moviebarcode/speed-racer.jpg' alt='Speed Racer (2008)' %}
 
 <p><em>Speed Racer (2008)</em> <a href="http://moviebarcode.tumblr.com/post/3762222221/speed-racer-2008" title="Speed Racer (2008)">#</a></p>
