--- a/source/_posts/bookmark/2011-06-01-toronto-artist-says-city-erased-mural-it-paid-him-to-paint.html
+++ b/source/_posts/bookmark/2011-06-01-toronto-artist-says-city-erased-mural-it-paid-him-to-paint.html
@@ -10,13 +10,11 @@ bookmark:
 ---
 
 <p>The Dupont Mural depicting a mathematical formula and an unnamed man in a suite was the latest innocent victim (the city actually commissioned Joel Richardson) of Mayor Rob Ford's war on graffiti.</p>
+
 <blockquote class="blockquote">
-<p>The colourful scene of faceless men in suits, dollar signs and hearts, funded mostly through donations from local businesses, proved popular enough, he says, that Giambrone’s staff asked him to paint another mural on the south wall, and helped him get a $2,000 commission from the city’s Clean and Beautiful secretariat.</p>
+    <p>The colourful scene of faceless men in suits, dollar signs and hearts, funded mostly through donations from local businesses, proved popular enough, he says, that Giambrone’s staff asked him to paint another mural on the south wall, and helped him get a $2,000 commission from the city’s Clean and Beautiful secretariat.</p>
 </blockquote>
-<div class="illustration inline">
-    <a href="http://cdn.mylesbraithwaite.com/media/uploads/linked/2011-06-01-toronto-artist-says-city-erased-mural-it-paid-him-to-paint/dupont_mural-large.jpg" title="Dupont Murla by Joel Richardson">
-        <img src="http://cdn.mylesbraithwaite.com/media/uploads/linked/2011-06-01-toronto-artist-says-city-erased-mural-it-paid-him-to-paint/dupont_mural-small.jpg" alt="Dupont Murla by Joel Richardson">
-    </a>
-</div>
+
+{% include c_image.html src='2011/152/toronto-artist-says-city-erased-mural-it-paid-him-to-paint/dupont-mural.jpg' alt='Dupont Murla by Joel Richardson' %}
 
 <p><em><a href="http://www.flickr.com/photos/joelarichardson/5024477861/">suitstencil4</a> by <a href="http://www.flickr.com/photos/joelarichardson/" title="Joel Richardson Flickr Profile">Joel Richardson</a></em></p>
