:pencil2: Making YAML vaild.

--- a/source/_posts/bookmark/2014-04-10-wallabag.html
+++ b/source/_posts/bookmark/2014-04-10-wallabag.html
@@ -16,7 +16,7 @@ gallery:
     - - src: 2014/100/wallabag/article.jpeg
         alt: "wallabag: Article View"
     - - src: 2014/100/wallabag/article_smartphone.jpeg
-        alt: wallabag: Article Mobile View
+        alt: "wallabag: Article Mobile View"
 ---
 
 <p>A self hosted PHP web application for saving web pages to read later (basically an open source clone of <em>Instapaper</em> and <em>Readability</em>).</p>
