:pencil2: Fixing a couple frontmatter issues.
Signed-off-by: Myles Braithwaite <me@mylesbraithwaite.com>

--- a/source/_posts/bookmark/2014-04-10-wallabag.html
+++ b/source/_posts/bookmark/2014-04-10-wallabag.html
@@ -15,7 +15,7 @@ gallery:
         alt: "wallabag: Homepage"
     - - src: 2014/100/wallabag/article.jpeg
         alt: "wallabag: Article View"
-    - - src: 2014/100/wallabag/article_smartphone.jpeg
+    - - src: 2014/100/wallabag/article_smartphone.png
         alt: "wallabag: Article Mobile View"
 ---
 
