:lipstick: Did some more work on the living style guide.

--- a/source/_pages/style.html
+++ b/source/_pages/style.html
@@ -28,10 +28,10 @@ page_css_class: style
         </div>
         <div class="sg-comp__content">
             <div class="sg-comp__output">
-                {{ comp.output }}
+                {{ comp.content }}
             </div>
             <div class="sg-comp__code">
-                {% highlight html %}{{ comp.output }}{% endhighlight %}
+                {% highlight html %}{{ comp.content }}{% endhighlight %}
             </div>
         </div>
     </div>
